# rlottery

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  REQUIREMENTS.md  TASKS.md  build.rs  config.toml
migrations/: V1__initial.sql  V2__add_indices.sql  V3__add_unique_constraint_to_lottery_operators_name.sql
proto/: admin.proto  draw.proto  wagering.proto
src/: lib.rs  main.rs  protos.rs
src/api/: admin_service.rs  draw_service.rs  mod.rs  wagering_service.rs
src/config/: app_config.rs
src/core/: audit_log.rs  board.rs  draw.rs  draw_level.rs  draw_manager.rs  game.rs  lottery_operator.rs  mod.rs  rng.rs  selection.rs  wager.rs  win.rs  win_class.rs  winning.rs
src/db/: draw.rs  draws.rs  mod.rs  operator.rs  wager.rs  wagers.rs
tests/: draw_integration_test.rs  test_config.toml
