[package]
name = "rlottery"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v7", "serde"] }
rand_xoshiro = "0.7"

chrono = { version = "0.4", features = ["serde"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-macros = "0.8"
serde_json = "1.0"
config = { version = "0.14", features = ["toml"] }
prost = "0.12"
prost-types = "0.12"
tokio-cron-scheduler = "0.9"

[build-dependencies]
tonic-build = "0.11"

