[package]
name = "rlottery"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "process", "net"] }
tonic = "0.11"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v7", "serde", "v4"] }
rand_xoshiro = "0.7"
strum = "0.26"
strum_macros = "0.26"

chrono = { version = "0.4", features = ["serde", "std"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-macros = "0.8"
serde_json = "1.0"
config = { version = "0.14", features = ["toml"] }
prost = "0.12"
prost-types = "0.12"
tokio-cron-scheduler = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.20.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
once_cell = "1.19.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
nix = {version = "0.28", features = ["process", "signal"]}